fix: [CDS-82425]: Add agentId filter to clusters step (#54730)
* fix: [CDS-82425]: Add agentId filter to clusters step

* rm comments

* fix formatting

* Make agentId nullable for clusters step for backward compat

* refine query filter for GitOps cluster step

* make gitops cluster step backward compatible without agent id

* fix: [CDS-82425]: Add agentId filter to clusters step

* rm comments

* fix formatting

* Make agentId nullable for clusters step for backward compat

* refine query filter for GitOps cluster step

* make gitops cluster step backward compatible without agent id

* fix import

* clusteragentRef for clusters step

* add agentId to append clusters in gitops step

* UTs for GitOps clusters step, adding agentId

* fix UTs